// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSaver page displays a list of users and their data 1`] = `
<tr
  aria-label="user row"
>
  <td
    aria-label="username"
  >
    <a
      aria-label="link to GitHub"
      href="https://github.com/devon-wolf"
    >
      devon-wolf
    </a>
  </td>
  <td
    aria-label="name"
  >
    n/a
  </td>
  <td
    aria-label="public repos"
  >
    80
  </td>
  <td
    aria-label="public gists"
  >
    0
  </td>
  <td
    aria-label="followers"
  >
    30
  </td>
  <td
    aria-label="following"
  >
    45
  </td>
  <td
    aria-label="created at"
  >
    11/25/2017
  </td>
</tr>
`;

exports[`UserSaver page displays a list of users and their data 2`] = `
<tr
  aria-label="user row"
>
  <td
    aria-label="username"
  >
    <a
      aria-label="link to GitHub"
      href="https://github.com/caseywar"
    >
      caseywar
    </a>
  </td>
  <td
    aria-label="name"
  >
    Casey Warren
  </td>
  <td
    aria-label="public repos"
  >
    58
  </td>
  <td
    aria-label="public gists"
  >
    0
  </td>
  <td
    aria-label="followers"
  >
    23
  </td>
  <td
    aria-label="following"
  >
    35
  </td>
  <td
    aria-label="created at"
  >
    11/24/2020
  </td>
</tr>
`;
